# agent-native-speech

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json.example  pyproject.toml
.agents/skills/: ans-server-setup  ans-session-management  ans-voice-pipeline  elevenlabs-voice-setup  qwen3-tts-voices
.claude-plugin/: plugin.json
.claude/skills/ans-server-setup/: SKILL.md
.claude/skills/ans-server-setup/references/: discord-bot.md  (+3 more)
.claude/skills/ans-session-management/: SKILL.md
.claude/skills/ans-voice-pipeline/: SKILL.md
.claude/skills/elevenlabs-voice-setup/: SKILL.md
.claude/skills/qwen3-tts-voices/: SKILL.md
server/: audio_sink.py  audio_source.py  call_manager.py  check_messages.py  chime.py  config.py  correction.py  discord_bot.py  elevenlabs_stt.py  elevenlabs_tts.py  http_app.py  main.py  message_manager.py  router.py  session_browser.py  session_manager.py  spawn.py  speech_mode.py  stt_pipeline.py  switchboard.py  transcriber.py  tts_backend.py  tts_engine.py  vad.py  voice_pool.py  voice_profile.py
server/hooks/: check_voice_queue.sh
server/init/: __init__.py  mcp_register.py  systemd.py  wizard.py
specs/: AUDIO_RESEARCH.md
specs/001-voice-qol-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voice-qol-features/checklists/: requirements.md
specs/001-voice-qol-features/contracts/: cli-commands.md  discord-commands.md  mcp-tools.md
specs/1-discord-voice-agent/: plan.md  research.md  spec.md
specs/1-discord-voice-agent/checklists/: requirements.md
voices/guilty_spark/: profile.json
(+14 files in other folders)
